Fix crash in HeadlessNetworkDelegate::OnBeforeURLRequest

Bug: 775513
Change-Id: I5917eeebcf1e86f0e6dc2db588ca18e34452d0c0
Reviewed-on: https://chromium-review.googlesource.com/723421
Reviewed-by: Eric Seckler <eseckler@chromium.org>
Commit-Queue: Eric Seckler <eseckler@chromium.org>
Commit-Queue: Alex Clarke <alexclarke@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509722}
Former-commit-id: 5a9c3a34781b010bc2e4b29c3867159756339317